fix: club column spacing on smaller devices

--- a/components/premier-league-table/premier-league-table.module.scss
+++ b/components/premier-league-table/premier-league-table.module.scss
@@ -31,13 +31,9 @@
 }
 
 .team-crest {
-	display: none;
 	max-height: 2rem;
 	width: 32px;
-
-	@media (min-width: $largeBreakpoint) {
-		display: inline;
-	}
+	max-width: none;
 }
 
 .game-result {
